--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-streamlit==1.37.0
-numpy==1.23.5
-Pillow==9.3.0
-moviepy==1.0.3
+pyaudio
+groq
+duckduckgo-search
+moviepy
+numpy
+Pillow
 phidata
-python-dotenv==1.0.0
-SpeechRecognition==3.8.1
-gTTS==2.2.3
-opencv-python==4.6.0.66
-requests==2.28.1
+python-dotenv
+SpeechRecognition
+gTTS
+requests
+opencv-python
+opencv-python-headless
+streamlit
