--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-setuptools
-PyAudio
-groq
-duckduckgo-search
-moviepy
+streamlit
 numpy
 Pillow
-phidata
+moviepy
+phi-assistant
+duckduckgo-search
+groq
 python-dotenv
 SpeechRecognition
 gTTS
 requests
 opencv-python
-opencv-python-headless
-streamlit
