--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit
-numpy
-Pillow
-moviepy
-phi-assistant
-duckduckgo-search
-groq
-python-dotenv
-SpeechRecognition
-gTTS
-requests
-opencv-python
+streamlit==1.29.0
+numpy==1.26.4
+Pillow==10.2.0
+moviepy==1.0.3
+phi-assistant==0.1.0
+duckduckgo-search==4.1.1
+groq==0.4.1
+python-dotenv==1.0.1
+SpeechRecognition==3.10.1
+gTTS==2.5.1
+requests==2.31.0
+opencv-python==4.9.0.80
